--- a/askai.html
+++ b/askai.html
@@ -232,7 +232,7 @@ $("#sendtoGPT").click(function(){
       $("#prompt_div").val("");
       $("#prompt_div").hide();  
     }else{
-      $("#result").html(qa[question_index][0]);
+      $("#result").html(question_index+". "+ qa[question_index][0]);
       $("#prompt_div").show();
       question_index++;
     }
