--- a/askai.html
+++ b/askai.html
@@ -12,7 +12,7 @@
     position: absolute;
   top: 55%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -45%);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -132,9 +132,9 @@
   </style>
   </head>
   <body>  
-  <div id="toolbar"><a style="text-decoration: none;color:white" href="/interview/askai.html">Home</a> <button id="getReport">Get Report</button></div>
+  <div id="toolbar"><a style="text-decoration: none;color:white" href="/interview/askai.html">Home</a>  id="topic" placeholder="Enter a topic you are interested" /><button id="getReport">Get Report</button></div>
   <div id="container">
-    <h1> Topic : <input id="topic" placeholder="Enter a topic you are interested" /> </h1>
+    
   
     <div id="result" contenteditable="true">
       Are you ready... let us go...
