--- a/askai.html
+++ b/askai.html
@@ -132,7 +132,7 @@
   </style>
   </head>
   <body>  
-  <div id="toolbar"><a style="text-decoration: none;color:white" href="/interview/askai.html">Home</a>  id="topic" placeholder="Enter a topic you are interested" /><button id="getReport">Get Report</button></div>
+  <div id="toolbar"><a style="text-decoration: none;color:white" href="/interview/askai.html">Home</a><input id="topic" placeholder="Enter a topic you are interested" /><button id="getReport">Get Report</button></div>
   <div id="container">
     
   
