--- a/askai.html
+++ b/askai.html
@@ -68,8 +68,8 @@
 }
 
 #topic {
-  font-size: x-large;
-  width: 100%;
+  font-size: large;
+  width: 50%;
   border:none;
   border-radius: 10px;
   padding:10px;
