--- a/askai.html
+++ b/askai.html
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background:#eee;
+  background:#333;
   padding:20px;
   width:90%;
   border-radius:20px;
