--- a/askai.html
+++ b/askai.html
@@ -149,9 +149,9 @@
 </div>
 <div id="topic_chooser">
   <h1>Select a topic </h1>
-<a href="?topic=High School Geometry" class="topic_option">High School Geometry</a>
-<a href="?topic=High School Algebra"  class="topic_option">High School Algebra</a>
-<a href="?topic=High School Physics" class="topic_option">High School Physics</a>
+<a href="?topic=java" class="topic_option">java</a>
+<a href="?topic=angularjs"  class="topic_option">angularjs</a>
+<a href="?topic=aws lambda" class="topic_option">AWS Lambda</a>
 <a href="?topic=High School Chemistry" class="topic_option">High School Chemistry</a>
 <a href="?topic=High School US Geography" class="topic_option">High School US Geography</a>
 <a href="?topic=High School Computer Science" class="topic_option">High School Computer Science</a>
