--- a/askai.html
+++ b/askai.html
@@ -116,15 +116,16 @@
 }
 
 #report_card {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -45%);
   display: none;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
   background:white;
   padding:20px;
-  width:100%;
-  height:100%;
-  overflow: auto;
+  width:90%;
   border-radius:20px;
   box-shadow:-5px -5px 5px gray;
 }
