--- a/askai.html
+++ b/askai.html
@@ -57,7 +57,8 @@
 
 #result {
   font-family: helvetica, sans-serif;
-  height: 200px;
+  height: auto;
+  max-height:150px;
   width: 90%;
   font-size: large;
   background: #fcf9ef;
