--- a/askai.html
+++ b/askai.html
@@ -313,7 +313,7 @@ function paidAI(question) {
   });
 }
 
-function getQs(){
+function getQs_old(){
   topic = topic.toLowerCase();
   url = "https://gsproxy-ndmd3ghqma-ue.a.run.app?url=https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name="+(topic.replaceAll(" ","_"));
   url = encodeURI(url);
@@ -322,6 +322,26 @@ function getQs(){
   $.get(url,function(data){
     
    qa = JSON.parse(data); 
+   $("#sendtoGPT").show();
+   
+  });
+}
+
+function getQs(){
+  topic = topic.toLowerCase();
+  url = "https://tests-ndmd3ghqma-ue.a.run.app?data=&user="+(topic.replaceAll(" ","_"));
+  url = encodeURI(url);
+ 
+  // url = "https://script.google.com/macros/s/AKfycbzF7sduJuzMI5npM-McIXmX53W5DO1dCjjE8McrGkthY3MwC0GcH7T0tiKXuVINJVam/exec?name=AWS Lamba";
+  $.get(url,function(data){
+    
+   rows = data.split("##");
+   qa = [];
+   for(i=0;i<rows.length;i++){
+    cols = rows[i].split("@@");
+    qa.push(cols);
+   }
+   
    $("#sendtoGPT").show();
    
   });
