--- a/tubeai.html
+++ b/tubeai.html
@@ -17,8 +17,24 @@
                 const videoPageHtml = await videoPageResponse.text();
                 const splittedHtml = videoPageHtml.split('"captions":')
                 $("#transcript").html(splittedHtml.length);
+
+                if (splittedHtml.length < 2) { 
+                    prompt = "List 5 numbered bullet summary of this and 5 interesting questions to explore";
+                    page_content = "";
+                    // callai(prompt);
+                    return; 
+                  } // No Caption Available so no transcript.
+  
+                const captions_json = JSON.parse(splittedHtml[1].split(',"videoDetails')[0].replace('\n', ''));
+                const captionTracks = captions_json.playerCaptionsTracklistRenderer.captionTracks;
+                const languageOptions = Array.from(captionTracks).map(i => { return i.name.simpleText; })
                 
-   
+                const first = "English"; // Sort by English first
+                languageOptions.sort(function(x,y){ return x.includes(first) ? -1 : y.includes(first) ? 1 : 0; });
+                languageOptions.sort(function(x,y){ return x == first ? -1 : y == first ? 1 : 0; });
+                var link = (captionTracks[0].baseUrl);
+                $("#transcript").append(link);
+    
             }
         getLangOptionsWithLink()
         </script>
