--- a/readpdf.html
+++ b/readpdf.html
@@ -74,10 +74,18 @@
 			});
 		function getSummary(selectedtext){
 			question = "summarize in easy to understand bullet points";
+			
+    if($("#ai_display").length > 0){
+      $("#ai_display").html("Loading AI response for : "+question +"<img src='https://cdn.dribbble.com/users/720991/screenshots/4945468/ava1_loader.gif' width='150px' height='50px' /><p><div>Preview</div>"+selectedtext+"</p>");
+    }else{
+      $("body").append("<div style='line-height:1.2 !important;font-size:14px;background:black;width:100%;height:800px;z-index:99999;position:fixed;top:0px'></div><div id='ai_display' style='padding:50px;overflow:auto;position:fixed;z-index:999999999;top:10%;width:60%;right:20%;height:800px;background:white;'>Loading AI response for : "+question +"<img src='https://cdn.dribbble.com/users/720991/screenshots/4945468/ava1_loader.gif' width='150px' height='50px' /><p><div>Preview</div>"+selectedtext+"</p></div>");
+    
+    }
+			
 			$.ajax({
         url: "https://askai-node-ndmd3ghqma-ue.a.run.app",
         type: 'POST',
-        data: JSON.stringify({q:question +": #transcript:"+ selectedtext}),
+        data: JSON.stringify({q:question +": #transcript:"+ selectedtext.substr(0,3000)}),
         contentType: "application/json",
         complete: function() {
           $("#ai_display").html();
