--- a/readpdf.html
+++ b/readpdf.html
@@ -64,7 +64,7 @@
                     extractText(pdfUrl).then(
                         function (text) {
                             textarea.innerHTML = text;
-			    getSummary(text);
+			    //getSummary(text);
                         },
                         function (reason) {
                             console.error(reason);
