--- a/readpdf.html
+++ b/readpdf.html
@@ -6,11 +6,11 @@
 
 	<body>
        
-		<h1>AI scan of any document</h1>
+		<h1>AI scan of any of your document</h1>
 		Load your pdf here to understand it in easily understandable language.
 		 <input type="file" id="pdf-file">
 		<div style="width:50%; height:600px;overflow:auto" id="text-area"></div>
-		<button onclick="getsummary()">Summarize</button>
+		<button onclick="getSummary()">Summarize</button>
 		<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
 		
