--- a/readpdf.html
+++ b/readpdf.html
@@ -77,8 +77,8 @@
 				reader.readAsArrayBuffer(file);
 			});
 		function getSummary(){
-			const selection = window.getSelection();
-    			const selectedtext = selection.toString();
+			selection = window.getSelection();
+    			selectedtext = selection.toString();
     			if(selectedtext !== ""){
 
     			}else{
