--- a/readpdf.html
+++ b/readpdf.html
@@ -8,7 +8,7 @@
        
 		<h1>AI scan of any of your document</h1>
 		Load your pdf here to understand it in easily understandable language.<br>
-		 <input type="file" id="pdf-file">
+		 <input type="file" id="pdf-file" accept="application/pdf">
 		
 		<button onclick="getSummary()">Summarize</button>
 		<div style="width:50%; height:600px;overflow:auto" id="text-area"></div>
