--- a/readpdf.html
+++ b/readpdf.html
@@ -84,7 +84,7 @@
     			}else{
 			selectedtext = $('#text-area').html();
 			}
-			question = "summarize in easy to understand bullet points";
+			question = "Identify this document based on selected text and list easy to understand bullet points to understand the document";
 			
 			    if($("#ai_display").length > 0){
 			      $("#ai_display").html("Loading AI response for : "+question +"<img src='https://cdn.dribbble.com/users/720991/screenshots/4945468/ava1_loader.gif' width='150px' height='50px' /><p><div>Preview</div>"+selectedtext+"</p>");
