--- a/readpdf.html
+++ b/readpdf.html
@@ -9,7 +9,7 @@
 		<h1>AI scan of any of your document</h1>
 		Load your pdf here to understand it in easily understandable language.<br>
 		 <input type="file" id="pdf-file" accept="application/pdf">
-		<input type="text" id="limit" default="1000"/>
+		<input type="text" id="limit" value="1000"/>
 		<button onclick="getSummary()">Summarize</button>
 		<div style="width:50%; height:600px;overflow:auto" id="text-area"></div>
 		<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
