--- a/readpdf.html
+++ b/readpdf.html
@@ -11,7 +11,7 @@
 		 <input type="file" id="pdf-file" accept="application/pdf">
 		<input type="text" id="limit" value="1000"/>
 		<button onclick="getSummary()">Summarize</button>
-		<div style="width:50%; height:600px;overflow:auto" id="text-area"></div>
+		<div style="width:50%; height:600px;overflow:auto; " contenteditable="true" id="text-area">Paste the text here or upload PDF</div>
 		<script src="https://mozilla.github.io/pdf.js/build/pdf.js"></script>
 
 		
