--- a/easyAI.html
+++ b/easyAI.html
@@ -6,6 +6,7 @@
 	</head>
 
 	<body style="background:black">
+		<script src="prompts.js"></script>
 	<div id='aiOverlay' style='z-index:99999'>
 		<div style='line-height:1.2 !important;font-size:14px;background:black;width:100%;height:800px;z-index:99999;position:fixed;top:0px'>
             <div id='aiToolbar' style='height:100%;width:150px;padding:10px;background:#2457a7;'>
